# milestone-smart-contracr

./: Anchor.toml  README.md  package.json
programs/milestone_voting/: Cargo.toml
programs/milestone_voting/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/milestone_voting/src/instructions/: add_milestone.rs  complete_milestone.rs  delete_milestone.rs  delete_project.rs  deposit_into_project.rs  evaluate.rs  init_project.rs  mod.rs  release_funds.rs  update_milestone.rs  update_project.rs  vote.rs
tests/: milestone_voting.ts  utils.ts
