[package]
name = "milestone_voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "milestone_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.29"
spl-token = { version = "3.2",  features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.11.1",  features = ["no-entrypoint"] } 
mpl-token-auth-rules = "1.0.0"
winnow = "=0.4.1"
